<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_menu_allfriends"
            android:title="@string/menu_item_artist" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_item_search" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/menu_item_favourite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_preferences"
            android:title="@string/menu_item_settings" />
    </group>
</menu>
