<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arsanima.yandexmobilization.fragments.FinderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/searchType">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_button_artist"
                android:id="@+id/radioButtonName"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_button_genres"
                android:id="@+id/radioButtonGenres"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/value_10dp" >

            <Button
                style="@style/buttonDefault"
                android:background="@drawable/button_def_left_round_with_border"
                android:layout_width="@dimen/value_50dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_clear_white"
                android:paddingLeft="@dimen/value_10dp"
                android:id="@+id/btnClear" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:background="@drawable/border_input_find_top_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/searchName"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/value_5dp"
                    android:paddingLeft="@dimen/value_5dp"
                    android:textColorHint="@color/colorInputHintFinder"
                    android:inputType="text" />

                <Spinner
                    style="@style/spinnerGroupdit"
                    android:drawableRight="@drawable/filter_arrow_up_down"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/searchGenres"
                    android:spinnerMode="dropdown"
                    android:minHeight="40dp"
                    android:visibility="gone"
                    android:layout_weight="1" />
            </LinearLayout>


            <Button
                style="@style/buttonDefault"
                android:background="@drawable/button_def_right_round_with_border"
                android:layout_width="@dimen/value_45dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_search_white"
                android:paddingLeft="@dimen/value_5dp"
                android:id="@+id/btnSearch" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_empty_search"
        android:id="@+id/emptySearch"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_below="@+id/emptySearch" />

</RelativeLayout>
